# cybergrill-backend

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: manage.py
src/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_phone.py  0004_alter_user_password.py  0005_user_is_superuser.py  0006_remove_user_create_at_remove_user_is_staff_and_more.py  0007_user_is_staff.py  0008_alter_user_is_staff_alter_user_phone.py
src/cybergrill/: asgi.py  settings.py  urls.py  wsgi.py
