[tool.poetry]
name = "cybergrill-backend"
version = "0.1.0"
description = ""
authors = ["Erick Medeiros <erickmedeiros@b2bit.company>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
